--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ main {
     section {
       grid-column: 2 / 8;
       padding: 1rem;
-      background: rgba(150, 100, 70, 0.5);
+      background: rgba(1, 44, 73, 0.5);
       font-size: 1.25rem;
       line-height: 1.5;
       margin-top: 3rem;
@@ -57,10 +57,10 @@ main {
     }
   
     blockquote p {
-      color: black;
-      background-color: rgb(233, 183, 136);
+      color: rgb(255, 255, 255);
+      background: rgba(1, 44, 73, 0.5);
       border-radius: 0px;
-      padding: 21px;
+      padding: 1px;
       font-size: 4rem;
       display: inline;
       line-height: 1;
